Fix spacing of CTA buttons

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -210,6 +210,7 @@ section {
 .btn-cta {
 	width: 100%;
 	padding: 0.6rem 1.5rem;
+	margin: 0.5rem auto;
 
 	@extend .btn;
 
@@ -553,14 +554,13 @@ section {
 }
 
 .profile-btn {
-	margin: 0.5rem 0;
 	font-weight: 700;
 
 	@extend .btn-cta;
 	@extend %btn-alpha;
 
 	@include media-breakpoint-up(lg) {
-		margin: 0 0.5rem;
+		margin-right: 0.5rem;
 	}
 }
 
